--- a/projects/cws-shared-lib/tsconfig.lib.json
+++ b/projects/cws-shared-lib/tsconfig.lib.json
@@ -13,7 +13,7 @@
       "es2018"
     ],
     "paths": {
-      "@ionic/*": ["node_modules/@ionic/*"],
+      "@ionic/*": ["node_modules/@ionic/*"]
    }
   },
   "angularCompilerOptions": {
